--- a/src/app/i18n/resources/en/translate.json
+++ b/src/app/i18n/resources/en/translate.json
@@ -8,5 +8,11 @@
         "medium": "Medium",
         "slow": "Slow"
     },
-    "language": "Language"
+    "language": {
+        "title": "Language",
+        "en": "English",
+        "ru": "Russian"
+    },
+    "moves_back": "3 moves back",
+    "or": "or"
 }
